# flask-debugtoolbar

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yaml  tests.yaml  tests.yml
docs/: Makefile  conf.py  index.rst  panels.rst
example/: app.py  example.py  test.db
example/templates/: index.html
flask_debugtoolbar/: __init__.py  compat.py  toolbar.py  utils.py
flask_debugtoolbar/panels/: __init__.py  config_vars.py  g.py  git.py  headers.py  logbook.py  logger.py  mail.py  memory.py  profiler.py  request_vars.py  route_list.py  settings_vars.py  sqlalchemy.py  template.py  timer.py  versions.py
flask_debugtoolbar/static/css/: toolbar.css
flask_debugtoolbar/static/js/: toolbar.js
flask_debugtoolbar/templates/: base.html
flask_debugtoolbar/templates/panels/: g.html  git.html  headers.html  logbook.html  logger.html  mail.html  memory.html  profiler.html  request_vars.html  route_list.html  settings_vars.html  sqlalchemy.html  sqlalchemy_error.html  sqlalchemy_explain.html  sqlalchemy_select.html  template.html  template_editor.html  versions.html
flaskext/debugtoolbar/: __init__.py  toolbar.py  utils.py  views.py
flaskext/debugtoolbar/panels/: __init__.py  headers.py  logger.py  profiler.py  request_vars.py  sqlalchemy.py  template.py  timer.py  versions.py
flaskext/debugtoolbar/static/css/: toolbar.css
flaskext/debugtoolbar/static/js/: toolbar.js
flaskext/debugtoolbar/templates/: base.html
flaskext/debugtoolbar/templates/panels/: logger.html  profiler.html  request_vars.html  sqlalchemy.html  sqlalchemy_explain.html  template.html
requirements/: build.txt  dev.txt  docs.txt  tests.in  tests.txt  typing.in  typing.txt
src/flask_debugtoolbar/: __init__.py  toolbar.py  utils.py
src/flask_debugtoolbar/panels/: __init__.py  config_vars.py  g.py  headers.py  logger.py  profiler.py  request_vars.py  route_list.py  sqlalchemy.py  template.py  timer.py  versions.py
src/flask_debugtoolbar/static/codemirror/mode/rst/: rst.js
src/flask_debugtoolbar/static/codemirror/mode/xquery/: xquery.js
src/flask_debugtoolbar/static/css/: toolbar.css
src/flask_debugtoolbar/static/js/: jquery-migrate.js  jquery.tablesorter.js  toolbar.js
src/flask_debugtoolbar/templates/: base.html  redirect.html
src/flask_debugtoolbar/templates/panels/: config_vars.html  logger.html  profiler.html  request_vars.html  sqlalchemy.html  sqlalchemy_error.html  sqlalchemy_select.html  template_editor.html  timer.html  versions.html
test/: basic_app.py  basic_app_plain_sqlalchemy.py  conftest.py  test_toolbar.py  test_utils.py
test/templates/: basic_app.html
tests/: basic_app.py  conftest.py  test_toolbar.py  test_utils.py
tests/templates/: basic_app.html
