[metadata]
name = Flask-DebugToolbar
version = 0.13.dev0
author = Michael van Tellingen
author_email = michaelvantellingen@gmail.com
maintainer = Matt Good
maintainer_email = matt@matt-good.net
description = A toolbar overlay for debugging Flask applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = flask, debug, toolbar
url = https://github.com/flask-debugtoolbar/flask-debugtoolbar
project_urls =
    Changelog = https://github.com/flask-debugtoolbar/flask-debugtoolbar/blob/master/CHANGES.rst
    Documentation = https://flask-debugtoolbar.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = flask_debugtoolbar
include_package_data = True
python_requires = >=2.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = flask_debugtoolbar
