[metadata]
name = Flask-DebugToolbar
version = 0.13.1
author = Michael van Tellingen
author_email = michaelvantellingen@gmail.com
maintainer = Matt Good
maintainer_email = matt@matt-good.net
description = A toolbar overlay for debugging Flask applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = flask, debug, toolbar
url = https://github.com/pallets-eco/flask-debugtoolbar
project_urls =
    Changelog = https://github.com/pallets-eco/flask-debugtoolbar/blob/master/CHANGES.rst
    Documentation = https://flask-debugtoolbar.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src

packages = find:
include_package_data = True
python_requires = >=2.7

[options.packages.find]
where = src
